merge secutiry part