@@ -1,6 +1,5 @@
 package edu.cs544.team5.util;
 
-import com.sun.tools.javac.util.List;
 import edu.cs544.team5.domain.Person;
 import edu.cs544.team5.domain.Role;
 import edu.cs544.team5.repository.PersonRepository;
@@ -9,6 +8,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Component;
+
+import java.util.Arrays;
+import java.util.List;
 
 import static edu.cs544.team5.domain.RoleType.*;
 
@@ -21,9 +23,8 @@ public class Igniter implements CommandLineRunner {
 
     @Override
     public void run(String... args) throws Exception {
-        List.of(new Role(ADMIN), new Role(STUDENT), new Role(FACULTY), new Role(PERSONNEL)).forEach(
-                roleRepository::save
-        );
+
+        List<Role> roles = Arrays.asList(new Role(ADMIN), new Role(STUDENT), new Role(FACULTY), new Role(PERSONNEL));
 
         Person admin = new Person();
         admin.setFirstName("Admin");
